# llm-sentiment

./: Dockerfile  README.md  fastapi_deployment.yaml  fastapi_hpa.yaml  fastapi_service.yaml  main.py  pyproject.toml
tests/: test_imdb.py  test_smoke.py
